--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         and got certified in Python(Basic).</p>
     </div>
     <footer>
-      <p>Create. Develop. Design.</p>
+      <p>Copyright &copy; 2024 | Managed by NISHANT | Designed and Developed by : NISHANT WALE</p>
     </footer>  
 </body>
 </html>
